tests/errors/sem.unknown-field.dot-access.or
main :: () -> void {
    foo_t :: struct {
        x := 10;
    };

    foo := foo_t.{};
    foo.y;
};
